--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,4 @@
 ---
 layout: default
 ---
-<!-- Import jQuery for every page -->
-<script src="{{ site.baseurl }}{% link assets/js/jquery-3.6.4.slim.min.js %}"></script>
+{{ content }}
