--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -5,4 +5,4 @@
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
 
 <!-- Include required Javascript libraries -->
-<script src="/assets/js/jquery-3.6.4.slim.min.js"></script>
+<script src="{{ site.baseurl }}{% link assets/js/jquery-3.6.4.slim.min.js %}"></script>
