--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -233,7 +233,7 @@ hr {
 
 .btn-github .icon {
   opacity: 0.6;
-  background: url("{{ site.baseurl }}{% link assets/images/blacktocat.png %}") 0 0 no-repeat;
+  background: url("../assets/images/blacktocat.png %}") 0 0 no-repeat;
 }
 
 a {
