--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -6,9 +6,11 @@ $body-foreground: $bright-blue !default;
 $header: $bright-blue !default;
 $blockquote-color: $spring-green !default;
 $blockquote-border: $sea-green !default;
+
 $container-max-width: 1000px;
 
 $font-monospace: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+$font-content: courier new, courier, monospace;
 
 @mixin media-max-width($max-width) {
   @media (max-width: $max-width) {
@@ -24,7 +26,7 @@ body {
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-family: $font-content;
 }
 
 /* General & 'Reset' Stuff */
@@ -67,7 +69,7 @@ header h1 {
   line-height: 1.5;
   margin: 0 0 0 -40px;
   font-weight: bold;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-family: $font-monospace;
   color: $header;
   letter-spacing: -1px;
   -webkit-font-smoothing: antialiased;
@@ -108,7 +110,7 @@ section img {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-family: $font-monospace;
   color: $header;
   letter-spacing: -0.03em;
 }
