--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -21,12 +21,17 @@ $font-content: courier new, courier, monospace;
 body {
   margin: 0;
   padding: 0;
-  background-color: $body-background;
-  //background: $body-background url("/assets/images/background.png") 0 0;
   color: $body-foreground;
+  background: $body-background url("../images/background.png") 0 0;
   font-size: 16px;
   line-height: 1.5;
   font-family: $font-content;
+}
+
+#content {
+  width: 100%;
+  height: 100%;
+  background-color: rgba($body-background, 0.6);
 }
 
 /* General & 'Reset' Stuff */
@@ -103,8 +108,8 @@ header h2 {
 #main_content {
   width: 100%;
   -webkit-font-smoothing: antialiased;
-  padding: 10px;
-  background-color: darken($body-background, 5%);
+  background-color: rgba(darken($body-background, 5%), 0.5);
+  padding: 20px;
 }
 section img {
   max-width: 100%
@@ -151,10 +156,6 @@ dt {
   font-weight: bold;
 }
 
-ul li {
-  //list-style-image:url('../images/bullet.png');
-}
-
 blockquote {
   color: $blockquote-color;
   padding-left: 10px;
@@ -162,11 +163,11 @@ blockquote {
 }
 
 pre {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(255, 255, 255, 0.15);
   padding: 10px;
   font-size: 16px;
-  color: #b5e853;
+  color: $body-foreground;
   border-radius: 2px;
   word-wrap: normal;
   overflow: auto;
@@ -189,7 +190,7 @@ table {
 
 th {
   text-align: left;
-  border-bottom: 1px dashed #b5e853;
+  border-bottom: 1px dashed $iris;
   padding: 5px 10px;
 }
 
@@ -200,8 +201,8 @@ td {
 hr {
   height: 0;
   border: 0;
-  border-bottom: 1px dashed #b5e853;
-  color: #b5e853;
+  border-bottom: 1px dashed $iris;
+  color: $iris;
 }
 
 /* Buttons
