--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -23,6 +23,8 @@ body {
   padding: 0;
   color: $body-foreground;
   background: $body-background url("../images/background.png") 0 0;
+  background-size: contain;
+  background-repeat: repeat;
   font-size: 16px;
   line-height: 1.5;
   font-family: $font-content;
