--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -18,13 +18,6 @@ $font-content: courier new, courier, monospace;
   }
 }
 
-@media only screen and (max-width: 480px) {
-  /* horizontal scrollbar for tables if mobile screen */
-  table, thead, tbody, th, td, tr {
-      display: block;
-  }
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -193,6 +186,8 @@ code.highlighter-rouge {
 table {
   width: 100%;
   margin: 0 0 20px 0;
+  overflow-x: auto;
+  display: block;
 }
 
 th {
